--- a/src/app/book-flight/book-flight.component.html
+++ b/src/app/book-flight/book-flight.component.html
@@ -1,20 +1,46 @@
 <form>
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="From" aria-label="Origin" aria-describedby="basic-addon1">
-      </div>
-      
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="To" aria-label="Destination" aria-describedby="basic-addon2">
-      </div>
-      <div class="input-group mb-3">
-      </div>
-      
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="To" aria-label="Recipient's username" aria-describedby="basic-addon2">
+  <mat-card>
+    <div class="row g-10">
+      <div class="col-sm-2">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Origin</mat-label>
+          <input matInput type="text" class="form-control" />
+        </mat-form-field>
       </div>
 
-      
-    
+      <div class="col-sm-2">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Destination</mat-label>
+          <input matInput type="text" class="form-control" />
+        </mat-form-field>
+      </div>
 
+      <div class="col-sm-3">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Select departure date</mat-label>
+          <input matInput [min]="minDate" [matDatepicker]="picker" />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </div>
 
+      <div class="col-sm-3">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Select return date</mat-label>
+          <input matInput [min]="minDate" [matDatepicker]="picker" />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </div>
+      <div class="col-sm-2">
+        <button type="button" class="btn btn-warning align-middle">Search</button>
+      </div>
+    </div>
+  </mat-card>
 </form>
